# mastodon-bot-template

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml  scheduled_run.yml
app/: bot.py  run.sh
docker/: Dockerfile  Rpackages.R
